--- a/deploy_evt_website.yml
+++ b/deploy_evt_website.yml
@@ -14,23 +14,22 @@
     AWS_PROFILE: "{{ profile }}" # MUST pass in as command line arg
     AWS_REGION: "{{ region }}"
   tasks:
-    - name: Generate self-signed certificate and trust on localhost.
-      ansible.builtin.import_tasks: cert_tasks.yml
-
     - name: Set up and launch EC2 instance.
       ansible.builtin.import_tasks: ec2_launch_tasks.yml
+
+    - name: Generate self-signed certificate.
+      ansible.builtin.import_tasks: cert_tasks.yml
 
     - name: Configure nginx in launched instance.
       ansible.builtin.import_tasks: configure_nginx_tasks.yml
       become: true
       delegate_to: '{{ instance_name }}'
-    
-    - name: Test HTTPS connection.
-      ansible.builtin.command: 'curl -k https://{{ public_ip }}'
 
-    - name: Test HTTP connection.
-      ansible.builtin.command: 'curl -k -L http://{{ public_ip }}'
-
-    - name: Open in browser.
-      ansible.builtin.command: 'open https://{{ public_ip }}'
+    - name: Trust the SSL certificate on localhost.
+      ansible.builtin.import_tasks: local_trust_tasks.yml
+      tags: local-trust
+      
+    - name: Test connection.
+      ansible.builtin.import_tasks: test_tasks.yml
+        
 
